app_controllers/infrastructure/kubernetes-deployments/authentication/auth/02_service-docker-desktop-auth-charles.yml

apiVersion: v1
kind: Service
metadata:
  name: auth
  annotations:
    external-dns.alpha.kubernetes.io/hostname: auth.docker-desktop.securethebox.us
spec:
  selector:
    app: auth
  ports:
  - name: http
    targetPort: 4181
    port: 80
