app_controllers/infrastructure/kubernetes-deployments/authentication/auth/02_service-us-west1-a-auth-charles.yml

apiVersion: v1
kind: Service
metadata:
  name: auth
spec:
  selector:
    app: auth
  ports:
  - name: http
    targetPort: 4181
    port: 80
