app_controllers/infrastructure/kubernetes-deployments/authentication/auth/03_ingress-docker-desktop-auth-charles.yml

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: auth
  annotations:
    kubernetes.io/ingress.class: traefik
    kubernetes.io/preserve-host: "true"
    traefik.frontend.passHostHeader: "false"
    traefik.frontend.priority: "1"
    ingress.kubernetes.io/auth-type: forward
    ingress.kubernetes.io/auth-url: http://auth
    ingress.kubernetes.io/auth-response-headers: X-Forwarded-User
    ingress.kubernetes.io/auth-trust-headers: true
spec:
  rules:
  - host: auth.securethebox.us
    http:
      paths:
      - path: /
        backend:
          serviceName: auth
          servicePort: http
